--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -3,7 +3,7 @@ name: Ruby
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/15 21-23 * * *'
+    - cron: '*/15 12-14 * * *' ## JST 21-23
 jobs:
   ruby:
 
